android/app/.cxx/ndkBuild/debug/x86_64/android_gradle_build_helloworld_x86_64.stderr.txt
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:48:32: warning: comparison of integers of different signs: 'uint32_t' (aka 'unsigned int') and 'int' [-Wsign-compare]
        for (uint32_t i = 0; i < size; i++)
                             ~ ^ ~~~~
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:86:23: warning: unused variable 'test' [-Wunused-variable]
            const int test = pow(i - radius, 2);
                      ^
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:112:31: warning: unused parameter 'component' [-Wunused-parameter]
    auto get_bounding_box(int component, cv::Mat stats)
                              ^
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:246:27: warning: comparison of integers of different signs: 'int' and 'std::__ndk1::vector<float, std::__ndk1::allocator<float> >::size_type' (aka 'unsigned long') [-Wsign-compare]
        for (int i = 0; i < X.size(); i++)
                        ~ ^ ~~~~~~~~
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:275:42: warning: unused parameter 'mask_high' [-Wunused-parameter]
                                cv::Mat &mask_high)
                                         ^
/Users/Gasp/Development/todel/rncpp/rncpp/android/app/src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:296:99: warning: unused parameter 'isIos' [-Wunused-parameter]
    std::string save_result_image(const cv::Mat &result_image, const std::string &uri, const bool isIos)
                                                                                                  ^
6 warnings generated.
src/main/jni/../../../../../src/cpp/hello_world_impl.cpp:306: error: undefined reference to 'cv::imwrite(cv::String const&, cv::_InputArray const&, std::__ndk1::vector<int, std::__ndk1::allocator<int> > const&)'
clang++: error: linker command failed with exit code 1 (use -v to see invocation)
make: *** [/Users/Gasp/Library/Android/sdk/ndk/21.3.6528147/build/core/build-binary.mk:725: /Users/Gasp/Development/todel/rncpp/rncpp/android/app/build/intermediates/ndkBuild/debug/obj/local/x86_64/libhelloworld.so] Error 1
